refactor: remove unused import and change get(0) to getFirst()